# safe-pilot

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ИНСТРУКЦИЯ.md
alembic/: env.py
alembic/versions/: 2aabeb6ce5a0_remove_ballast_station_type_and_flag.py  7d1117d0308d_initial_schema.py  9c7e4f2a1b6d_fix_postgresql_integrity_constraints.py  beb0592006cc_add_fuel_systems_temporary_aircraft_flag.py
app/: config.py  main.py
app/bot/: commands.py
app/bot/handlers/: _common.py  aircraft_update.py  aircraft_wizard.py  flight_calculation.py  menu.py  quick_calculate.py  wizard_nav.py
app/bot/keyboards/: common.py
app/bot/middlewares/: db_session.py
app/bot/states/: aircraft_wizard.py  flight_wizard.py  quick_calc_wizard.py
app/bot/texts/: i18n.py
app/database/: models.py  session.py
app/domain/: calculator.py  envelope.py  exceptions.py  fuel_allocation.py  models.py  quick_calculation.py  quick_recommendations.py  recommendations.py  units.py
app/repositories/: aircraft_repository.py  flight_repository.py
app/services/: aircraft_service.py  flight_service.py
tests/: conftest.py  test_aircraft_service.py  test_bot_ui.py  test_calculator.py  test_envelope.py  test_fuel_allocation.py  test_migration.py  test_quick_calculation.py  test_quick_recommendations.py  test_recommendations.py  test_regressions.py  test_repositories.py
